# cplusplus-api

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  bootstrap  configure  configure.ac  configure.in
doc/: Makefile.am  config.dox
example/: Makefile.am
example/lib/: Makefile.am
example/lib/SiteShotgun/: Makefile.am  SiteProject.cpp  SiteProject.h  SiteReference.cpp  SiteReference.h  SiteShotgun.cpp  SiteShotgun.h
example/plugins/: Makefile.am
example/plugins/python/: Makefile.am  siteconfigure.py  siteshotgun.py
example/plugins/python/sip/: SiteProject.sip  SiteReference.sip  SiteShotgun.sip  _siteshotgun.sip
example/plugins/python/test/: Makefile.am  testSiteProject.py  testSiteReference.py
example/test/: Makefile.am  testSiteProject.cpp  testSiteReference.cpp
lib/: Makefile.am  Makefile.in
lib/Shotgun/: Asset.cpp  Asset.h  CustomEntity.cpp  CustomEntity.h  Daily.cpp  Daily.h  Delivery.cpp  Delivery.h  DeliveryItem.cpp  DeliveryItem.h  Dict.cpp  Dict.h  Element.cpp  Element.h  Entity.cpp  Entity.h  Fields.cpp  Fields.h  FilterBy.cpp  FilterBy.h  Group.cpp  Group.h  HumanUser.cpp  HumanUser.h  List.cpp  List.h  Makefile.am  Makefile.in  Method.cpp  Method.h  Note.cpp  Note.h  NoteMixin.cpp  NoteMixin.h  Playlist.cpp  Playlist.h  Project.cpp  Project.h  PublishEvent.cpp  PublishEvent.h  (+36 more)
plugins/: Makefile.am  Makefile.in
plugins/python/: Makefile.am  Makefile.in  configure.py  shotgun.py
plugins/python/sip/: Asset.sip  CustomEntity.sip  Daily.sip  Delivery.sip  DeliveryItem.sip  Dict.sip  Element.sip  Entity.sip  Fields.sip  FilterBy.sip  Group.sip  HumanUser.sip  List.sip  Method.sip  Note.sip  NoteMixin.sip  Playlist.sip  Project.sip  PublishEvent.sip  Reference.sip  Review.sip  ReviewItem.sip  Sequence.sip  Shot.sip  Shotgun.sip  Show.sip  SiteProject.sip  SiteShotgun.sip  SortBy.sip  Task.sip  TaskMixin.sip  User.sip  Version.sip  _shotgun.sip  exceptions.sip  mappedTypes.sip
plugins/python/test/: Makefile.am  listProjects.py  simpletest.py  testCustomEntity.py  testSiteProject.py
test/: Makefile.am  Makefile.in  listProjects.cpp  simpletest.cpp  testCustomEntity.cpp  testSiteProject.cpp
