
AM_CPPFLAGS = -I$(top_srcdir)/lib

lib_LTLIBRARIES = libShotgun.la

libShotgun_la_SOURCES = Asset.cpp               \
                        Daily.cpp               \
                        Delivery.cpp            \
                        DeliveryItem.cpp        \
                        Element.cpp             \
                        Entity.cpp              \
                        Group.cpp               \
                        Method.cpp              \
                        Note.cpp                \
                        NoteMixin.cpp           \
                        Playlist.cpp            \
                        PublishEvent.cpp        \
                        Reference.cpp           \
                        Review.cpp              \
                        ReviewItem.cpp          \
                        Sequence.cpp            \
                        Shot.cpp                \
                        Shotgun.cpp             \
                        Show.cpp                \
                        Task.cpp                \
                        TaskMixin.cpp           \
                        Type.cpp                \
                        User.cpp                \
                        utils.cpp

include_HEADERS = Asset.h                       \
                  Daily.h                       \
                  Delivery.h                    \
                  DeliveryItem.h                \
                  Element.h                     \
                  Entity.h                      \
                  Group.h                       \
                  Method.h                      \
                  Note.h                        \
                  NoteMixin.h                   \
                  Playlist.h                    \
                  PublishEvent.h                \
                  Reference.h                   \
                  Review.h                      \
                  ReviewItem.h                  \
                  Sequence.h                    \
                  Shotgun.h                     \
                  Shot.h                        \
                  Show.h                        \
                  Task.h                        \
                  TaskMixin.h                   \
                  Type.h                        \
                  User.h                        \
                  utils.h


libShotgun_la_LIBS = @LIBS@

