
lib_LTLIBRARIES = libShotgun.la

INCLUDES = -I$(top_srcdir)/lib

libShotgun_la_LIBADD = @XMLRPC_LDADD@ @XMLRPC_LDFLAGS@
libShotgun_la_CPPFLAGS = @XMLRPC_CFLAGS@ 

libShotgun_la_SOURCES = Asset.cpp               \
			Delivery.cpp            \
			Element.cpp             \
			Entity.cpp              \
			Group.cpp               \
			Method.cpp              \
			Note.cpp                \
			NoteMixin.cpp           \
			Playlist.cpp            \
			PublishEvent.cpp        \
			Review.cpp              \
			ReviewItem.cpp          \
			Sequence.cpp            \
			Shot.cpp                \
			Shotgun.cpp             \
			Project.cpp             \
			Task.cpp                \
			TaskMixin.cpp           \
			HumanUser.cpp           \
			Version.cpp             \
			CustomEntity.cpp        \
			FilterBy.cpp            \
			SortBy.cpp              \
			List.cpp                \
			Dict.cpp                \
			Fields.cpp              \
			types.cpp               \
			exceptions.cpp          \
			utils.cpp

include_HEADERS = Asset.h                       \
	          Delivery.h                    \
	          Element.h                     \
	          Entity.h                      \
	          Group.h                       \
	          Method.h                      \
	          Note.h                        \
	          NoteMixin.h                   \
	          Playlist.h                    \
	          PublishEvent.h                \
	          Review.h                      \
	          ReviewItem.h                  \
	          Sequence.h                    \
	          Shotgun.h                     \
	          Shot.h                        \
	          Project.h                     \
	          Task.h                        \
	          TaskMixin.h                   \
	          HumanUser.h                   \
	          Version.h                     \
	          CustomEntity.h                \
	          FilterBy.h                    \
	          SortBy.h                      \
	          List.h                        \
	          Dict.h                        \
	          Fields.h                      \
	          types.h                       \
	          exceptions.h                  \
	          utils.h
