
TESTS_ENVIRONMENT = PYTHONPATH="$(top_srcdir)/plugins/python:$(PYTHONPATH)" \
                    LD_LIBRARY_PATH="$(top_builddir)/lib/Shotgun/.libs:$(LD_LIBRARY_PATH)" \
                    DYLD_LIBRARY_PATH="$(top_builddir)/lib/Shotgun/.libs:$(DYLD_LIBRARY_PATH)"

TESTS = simpletest.py listProjects.py
