
TESTS_ENVIRONMENT = PYTHONPATH="$(top_srcdir)/example/plugins/python:$(PYTHONPATH)" \
                    LD_LIBRARY_PATH="$(top_builddir)/example/lib/SiteShotgun/.libs:$(LD_LIBRARY_PATH)" \
                    DYLD_LIBRARY_PATH="$(top_builddir)/example/lib/SiteShotgun/.libs:$(DYLD_LIBRARY_PATH)"

TESTS = testSiteProject.py
